tests/ui/diagnostic_namespace/do_not_recommend/simple.next.stderr
error[E0277]: the trait bound `*mut (): Foo` is not satisfied
  --> $DIR/simple.rs:19:17
   |
LL |     needs_foo::<*mut ()>();
   |                 ^^^^^^^ the trait `Foo` is not implemented for `*mut ()`
   |
note: required by a bound in `needs_foo`
  --> $DIR/simple.rs:14:17
   |
LL | fn needs_foo<T: Foo>() {}
   |                 ^^^ required by this bound in `needs_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
